@@ -1,3 +1,8 @@
+2009-01-25  Stipe Tolj  <stolj at kannel.org>
+    * gwlib/http.c: add function recover_absolute_uri() to handle partly
+      incomplete absoluteURI values in redirect HTTP headers.
+      [Msg-Id: <4979FB14.2000600@tolj.org>]
+  
 2009-01-21 Alexander Malysh <amalysh at kannel.org>
     * utils/makedist: added sha1 digest for packages.
 
